--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-countup": "^6.5.0",
