--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+REACT_APP_YOUR_SERVICE_ID=service_a5cij4f
+REACT_APP_YOUR_TEMPLATE_ID=template_1thag8k
+REACT_APP_YOUR_PUBLIC_KEY=vaoQgLwO0LjZ3D9yU
+PUBLIC_URL=http://localhost:3000
+
+
 REACT_APP_API_URL=url
 VITE_API_URL=url
 
